# adeft

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  paper.bib  paper.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: tests.yml
DADA/: acromine.py  prototype_acromine.py
adeft/: __init__.py  disambiguate.py  discover.py  ground.py  locations.py  nlp.py  recognize.py  util.py
adeft/download/: __init__.py  __main__.py  download.py
adeft/gui/: __init__.py
adeft/modeling/: __init__.py  classify.py  corpora.py  label.py
adeft/nlp/: __init__.py  compare_strings.py  nlp.py  preprocess.py  resources.py  stem.py  stopwords.json
adeft/score/: __init__.py  _score.c  _score.pyx  permutations.c  permutations.pxd  permutations.pyx  score.c  score.pxd  score.py  score.pyx  score_util.c  score_util.pyx
adeft/tests/: test_classify.py  test_corpora.py  test_disambiguate.py  test_discover.py  test_download.py  test_ground.py  test_nlp.py  test_recognize.py  test_score.py  test_util.py  util.c  (+1 more)
deft/: __init__.py  acromine.py  analysis.py  analysis.py~  classify.py  disambiguate.py  discover.py  download.py  extraction.py  get_rawtext.py  locations.py  mine.py  nlp.py  recognize.py  recognizer.py  resources.py  sense.py  util.py
doc/: conf.py  index.rst  requirements.txt  tutorials.rst
notebooks/: introduction.ipynb  model_building.ipynb  tutorial.ipynb
paper/: paper.bib  paper.md
tests/: test_classify.py  test_corpora.py  test_disambiguate.py  test_download.py  test_nlp.py  test_recognize.py  test_util.py  test_validate.py
(+96 files in other folders)
