[build-system]
requires = ["setuptools", "wheel", "Cython>=3.0.4"]
build-backend = "setuptools.build_meta"

[project]
name = "adeft"
version = "0.12.0"
keywords=['nlp', 'biology', 'disambiguation']
license = {file = "LICENSE"}
description = "Acromine based Disambiguation of Entities From Text"
maintainers = [
            {name = "adeft developers", email = "albert.steppi@gmail.com"}
]

requires-python = ">=3.7"
dependencies = [
             "nltk",
             "scikit-learn>=1.0",
             "boto3",
             "flask",
             "appdirs"
]
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
          'Development Status :: 4 - Beta',
          'License :: OSI Approved :: BSD License',
          'Programming Language :: Python :: 3.7',
          'Programming Language :: Python :: 3.8',
          'Programming Language :: Python :: 3.9',
          'Programming Language :: Python :: 3.10',
          'Programming Language :: Python :: 3.11',
          'Programming Language :: Python :: 3.12',
]

[project.optional-dependencies]
test = [
     "pytest",
     "pytest-cov"
]
